--- a/international-conference.html
+++ b/international-conference.html
@@ -227,6 +227,28 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+
+                <div class="col-lg-12">
+                    <h2>Paper Writing</h2>
+                    <p>Research papers should be original unpublished works that follow the
+                        conference theme</p>
+                    <ul>
+                        <li>Word limit wolid be 200 to 250 words for structured abstract and
+                            6,000 to 6,500 words for research paper</li>
+                        <li>The structured abstract should specify the research objectives,
+                            methodology, and major findings</li>
+                        <li>Suggested structure of the research paper: Introduction, Review of
+                            Literature, Research Gap, Research Methodology, Major Findings,
+                            Contributions of the study, Limitations, and Scope for Further
+                            Research</li>
+                        <li>The text should be written in A4 size, Times New Roman, font size-12
+                            with 1.5 line spacing</li>
+                        <li>The reference style should be APA (6th edition).</li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
 
     </div> <!-- end of ex-basic-2 -->
