--- a/international-conference.html
+++ b/international-conference.html
@@ -230,7 +230,7 @@
             <div class="row">
 
                 <div class="col-lg-12">
-                    <h2>Paper Writing</h2>
+                    <h2>Paper Submission Guidelines</h2>
                     <p>Research papers should be original unpublished works that follow the
                         conference theme</p>
                     <ul>
