--- a/international-conference.html
+++ b/international-conference.html
@@ -250,7 +250,7 @@
 
             </div>
             <div class="form-group">
-                <button onclick="document.location='https://docs.google.com/forms/d/e/1FAIpQLSeeb-zI6zp3EGqWe92An4RItmcRblyRTGgDCG3YCiFlOq_7tA/'" type="submit" class="form-control-submit-button">Please submit your abstract through the given link</button>
+                <button onclick="document.location='https://forms.gle/LwXJiEZYMfjYdh3E7'" type="submit" class="form-control-submit-button">Please submit your abstract through the given link</button>
             </div>
         </div>
 
