--- a/speaker.html
+++ b/speaker.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="team-title">
                     <h5>Dr. Priyanka Sharma</h5>
-                    <span>Assistant Professor, Dept of Marketing Management, IIM Lucknow, </span>
+                    <span>Assistant Professor, Department of Marketing Management, IIM Lucknow, </span>
                 </div>
             </div>
 
@@ -190,7 +190,7 @@
                 </div>
                 <div class="team-title">
                     <h5>Dr. Ravindra Tripathi</h5>
-                    <span>Associate Professor, Dept of Humanities and Social Science, MNNIT Allahabad</span>
+                    <span>Associate Professor, Department of Humanities and Social Science, MNNIT Allahabad</span>
                 </div>
             </div>
             
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Amalesh Bhowal</h5>
+                    <h5>Prof. Amalesh Bhowal</h5>
                     <span>Professor, Department of Commerce, Assam University</span>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Vijayshri Tewari</h5>
+                    <h5>Prof. Vijayshri Tewari</h5>
                     <span>Professor, Department of Management Studies, IIIT Allahabad.</span>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Dibyojyoti Bhattacharjee</h5>
+                    <h5>Prof. Dibyojyoti Bhattacharjee</h5>
                     <span>Professor, Department of Statistics, Assam University</span>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Dr Habib Ratvi</h5>
+                    <h5>Dr. Habib Ratvi</h5>
                     <span>College of Business Administration, Albaha University, Kingdom of Saudi Arabia </span>
                 </div>
             </div>
@@ -295,7 +295,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Prof MOHAMMAD SOGIR HOSSAIN KHANDOKER</h5>
+                    <h5>Prof. MOHAMMAD SOGIR HOSSAIN KHANDOKER</h5>
                     <span>Professor, Department of finance, Jagannath University, Dhaka</span>
                 </div>
             </div>
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="team-title">
-                    <h5>Dr Jayshree Bhattacharjee</h5>
+                    <h5>Dr. Jayshree Bhattacharjee</h5>
                     <span>Stock Holding Corporation of India Limited</span>
                 </div>
             </div>
