--- a/ssbf.html
+++ b/ssbf.html
@@ -141,8 +141,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Past Summer
-                            Schools</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span> Summer School on Behavioural Finance</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -335,6 +334,28 @@
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-md-6">
+                    <p>The ‘Summer School on Behavioural Finance’ is the one unrivalled programme. Being aware that
+                        Behavioural finance is
+                        still a novel and unexplored area of research, the Indian Institute of Information
+                        Technology Allahabad started this
+                        programme in the year 2018 with the objective of encouraging the researchers who wish to
+                        work in the concerned area.
+                        Since the very beginning of the programme, a large number of students, researchers and
+                        faculties from all around the
+                        world, have been attending this programme. The recent pandemic didn’t stop us from
+                        conducting the programme and as a
+                        result, the programme saw an upsurge in the number of applications with more than 170
+                        participants from all around the
+                        world in the year 2020 and 184 in the year 2021.</p>
+                    
+                </div>
+                <div class="col-md-6">
+                    <div class="image-container-small">
+                        <img class="img-fluid" src="images/grouppic.jpeg" alt="alternative">
+                    </div>
+                </div>
         </div> <!-- end of container -->
     </div> <!-- end of cards -->
     <!-- end of takeaways -->
@@ -373,7 +394,6 @@
 
     </div> <!-- end of ex-basic-2 -->
     <!-- end of privacy content -->
--->
 
 
     <!-- Footer -->
