--- a/ssbf.html
+++ b/ssbf.html
@@ -336,6 +336,8 @@
             </div> <!-- end of row -->
             <div class="row">
                 <div class="col-md-6">
+                    <br>
+                    <h2>Past Summer Schools</h2>
                     <p>The ‘Summer School on Behavioural Finance’ is the one unrivalled programme. Being aware that
                         Behavioural finance is
                         still a novel and unexplored area of research, the Indian Institute of Information
