--- a/ssbf.html
+++ b/ssbf.html
@@ -380,25 +380,22 @@
                 <div class="col-md-4">
                     <div class="footer-col third">
                         <h5>Links</h5>
-                        <li class="list-unstyled li-space-lg p-small">
-                        <li class="media">
-                            <i class="fas fa-square"></i>
-                            <div class="media-body"><a
-                                    href="https://docs.google.com/forms/d/e/1FAIpQLSezXlv9MHBZ9DfqydPA7_koqY_a55ErUieqXXDM-a3kILGsWw/viewform?usp=sf_link">Register</a>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="pastsummerschool.html">Past Summer Schools</a></div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="iiita.html">About IIITA</a></div>
-                        </li>
-                        </li>
+                        <ul class="list-unstyled li-space-lg p-small">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="register.html">Register</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="pastsummerschool.html">Past Summer Schools</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="iiita.html">About IIITA</a></div>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-                <!--
+                </div> <!-- end of col -->
                 <div class="col-md-3">
                     <div class="footer-col fourth">
                         <h5>Social Media</h5>
@@ -422,8 +419,7 @@
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
-                </div>-->
-                <!-- end of col -->
+                </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
