--- a/ssbf.html
+++ b/ssbf.html
@@ -360,6 +360,7 @@
                 <br>
         </div> <!-- end of container -->
     </div> <!-- end of cards -->
+    </div>
     <!-- end of takeaways -->
     <!-- end of privacy content -->
 
@@ -396,30 +397,6 @@
                         </ul>
                     </div>
                 </div> <!-- end of col -->
-                <div class="col-md-3">
-                    <div class="footer-col fourth">
-                        <h5>Social Media</h5>
-                        <p class="p-small">For news & updates follow us</p>
-                        <a href="#your-link">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-pinterest-p"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="#your-link">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
@@ -431,8 +408,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2022 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights
-                        reserved</p>
+                    <p class="p-small">Copyright © 2022 <a href="https://iiita.ac.in">IIIT Allahabad</a> - All rights reserved</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
