--- a/ssbf.html
+++ b/ssbf.html
@@ -364,17 +364,27 @@
     <!-- end of takeaways -->
     <!-- end of privacy content -->
 
-
     <!-- Footer -->
     <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="footer-col first">
-                        <h5>About the Department</h5>
-                        <p class="p-small">The Department of Management Studies, IIIT, Allahabad was constituted with
-                            the philosophy of running and
-                            managing the programmes with a focus on Management and Technology.</p>
+                    <div class="footer-col third">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled li-space-lg p-small">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/xKfLRbK9NiyM8Tk89">Register</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/GoHoPymmkq274VAF8">Register for ICSF</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body"><a href="https://forms.gle/LwXJiEZYMfjYdh3E7">Submit Abstract</a></div>
+                            </li>
+                        </ul>
                     </div>
                 </div> <!-- end of col -->
 
@@ -388,7 +398,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="pastsummerschool.html">Past Summer Schools</a></div>
+                                <div class="media-body"><a href="ssbf.html">About SSBF</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
