about dept of management

--- a/iiita.html
+++ b/iiita.html
@@ -203,12 +203,34 @@
                                     pockets. All academic and residential areas are connected to the Institute network.
                                 </p>
                             </div>
-
                         </div>
+                    </div>
+                </div>
 
+                <div class="col-lg-12">
+                    <div class="text-container">
+
+                        <h3>About the Department</h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>The Department of Management Studies, Indian Institute of Information
+                                    Technology, Allahabad was constituted with the philosophy of running and
+                                    managing the programmes with a focus on Management and Technology. It
+                                    is propelling academic excellence through innovative pedagogy of blended
+                                    learning inculcating all-around self-development by creativity, knowledge
+                                    exchange, empowerment, and enrichment of students and faculty members.
+                                    The department offers two programmes; 2 Years Full-Time MBA & Full Time
+                                    Dual Degree MBA - Ph.D. The strength of the department lies in the faculty
+                                    who are having exposure to fields of Management and IT, belonging to
+                                    various institutes of national importance and centers of excellence.
+                                </p>
+                            </div>
+                            
+                        </div>
 
                     </div>
                 </div>
+
             </div>
         </div>
     </div> <!-- end of ex-basic-2 -->
